db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysqldb
  name: mysqldb
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysqldb
    spec:
      containers:
        - image: keao/mysqldb:3.0
          imagePullPolicy: IfNotPresent
          name: mysqlshop
status: {}
