shop_order_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simpleshopmysqlorder
  name: simpleshopmysqlorder
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleshopmysqlorder
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simpleshopmysqlorder
    spec:
      containers:
        - image: bug00126/simpleshopmysql:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: simpleshopmysqlorder
          ports:
            - containerPort: 8080
          resources: {}
status: {}
