shop_product_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simpleshopmysql
  name: simpleshopmysql
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleshopmysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simpleshopmysql
    spec:
      containers:
        - image: noproblem520/simple_shop:latest
          imagePullPolicy: IfNotPresent
          name: simpleshopmysql
          ports:
            - containerPort: 8080
          resources: {}
status: {}
