db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysqldb
  name: mysqldb
  namespace: test
spec:
  ports:
    - port: 3310
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysqldb
  type: ClusterIP
status:
  loadBalancer: {}
