shop_order_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simpleshopmysqlorder
  name: simpleshoporder
  namespace: test
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: simpleshopmysqlorder
  type: LoadBalancer
status:
  loadBalancer: {}
