shop_product_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simpleshopmysql
  name: simpleshop
  namespace: test
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simpleshopmysql
  type: LoadBalancer
status:
  loadBalancer: {}
