ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo-localhost
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: simpleshop
            port:
              number: 8080
        path: /api/v1/product
        pathType: Prefix
      - backend:
          service:
            name: simpleshoporder
            port: 
              number: 8081
        path: /api/v1/order
        pathType: Prefix
      - backend:
          service:
            name: simpleshop
            port: 
             number: 8080
        path: /api/v1/tag
        pathType: Prefix 
status:
  loadBalancer: {}
